# plugin-stt

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: inference-dummy.yaml  inference-mlx.yaml  inference-onnx.yaml  inference.yaml
src/speechmux_plugin_stt/: main.py
src/speechmux_plugin_stt/engine/: base.py  dummy.py  registry.py
src/speechmux_plugin_stt/service/: inference_servicer.py
tests/: dummy_streaming_engine.py  test_decode_options.py  test_inference_servicer.py  test_servicer_streaming.py
